kotlin-ide/idea/testData/compiler/asJava/lightClasses/compilationErrors/AnnotationModifiers.java
public final class A /* A*/ {
  @kotlin.jvm.Transient()
  @kotlin.jvm.Volatile()
  @org.jetbrains.annotations.NotNull()
  private transient volatile java.lang.String c;

  @kotlin.jvm.Strictfp()
  @kotlin.jvm.Synchronized()
  public final synchronized strictfp void f();//  f()

  @org.jetbrains.annotations.NotNull()
  public final java.lang.String getC();//  getC()

  public  A();//  .ctor()

  public final void setC(@org.jetbrains.annotations.NotNull() java.lang.String);//  setC(java.lang.String)

}